# dog

./: .gitignore  CMakeLists.txt  Makefile  README.md  cirbuf.c  cirbuf.h  data.c  data.h  defines.h  dog.c  dog.h  helpers.c  helpers.h  list.h  logger.c  logger.h  main.c  main.h  mongoose_helper.c  mongoose_helper.h
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  dog
tests/: catch_stdour_stderr.sh  color.c  complicated_log.py  env.sh  eternal_stdout_stderr.sh  generator_stdout_stderr.sh  pids.c  reset.sh  segfault  segfault.c  setup_env.sh  start_some_apps.sh  std.c  test.sh
